finished third problem
